# infra_sprint1

./: .gitignore  README.md  pyproject.toml
backend/kittygram_backend/: settings.py
infra/: default  gunicorn_kittygram  kittygram_site.txt
