[tool.poetry]
name = "infra-sprint1"
version = "0.1.0"
description = ""
authors = ["ivditm <salut.dityatev@gmail.com>"]
readme = "README.md"
packages = [{include = "infra_sprint1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.3"
djangorestframework = "3.12.4"
djoser = "2.1.0"
webcolors = "1.11.1"
pillow = "9.0.0"
pytest = "6.2.4"
pytest-django = "4.4.0"
pytest-pythonpath = "0.7.3"
python-dotenv = "1.0.0"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
